using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Script
{
    public static class StringHelper
    {
        public const string PositionX = "PositionX";
        public const string PositionY = "PositionY";
        public const string Player = "Player";
        public const string Explosion = "Explosion";
        public const string monsterDie = "MonsterDie";
        public const string CenterExplosion = "CenterExplosion";
        public const string Hit = "Hit";
        public const string dieConfirm = "DieConfirm";
        public const string BossBalloon = "BossBalloon";
        public const string Balloon = "Balloon";

    }
}
